added first building block, very rough

--- a/apps/code/en.html
+++ b/apps/code/en.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="/storage.js"></script>
   <script type="text/javascript" src="../_soy/soyutils.js"></script>
   <script type="text/javascript" src="template.js"></script>
+  <script type="text/javascript" src="../../language/common/filters.js"></script>
   <script>
     var MSG = {
       // Tooltips.
@@ -21,6 +22,7 @@
       catColour: 'Colour',
       catVariables: 'Variables',
       catProcedures: 'Procedures',
+      catFilters: 'Filters',
       // Misc text.
       blocks: 'Blocks',
       badXml: 'Error parsing XML:\n%1\n\nAbandon changes?',
