--- a/demos/toolbox/index.html
+++ b/demos/toolbox/index.html
@@ -36,6 +36,18 @@
           <mutation elseif="1" else="1"></mutation>
         </block>
       </category>
+ 
+      <category name="Manoj">
+        <block type="controls_if"></block>
+        <block type="controls_if">
+          <mutation else="1"></mutation>
+        </block>
+        <block type="controls_if">
+          <mutation elseif="1" else="1"></mutation>
+        </block>
+      </category>
+      
+      
       <category name="Loops">
         <block type="controls_repeat"></block>
         <block type="controls_whileUntil"></block>
