added a custom block, with python code generation functionality

--- a/apps/code/en.html
+++ b/apps/code/en.html
@@ -6,7 +6,12 @@
   <script type="text/javascript" src="/storage.js"></script>
   <script type="text/javascript" src="../_soy/soyutils.js"></script>
   <script type="text/javascript" src="template.js"></script>
+
+  <!-- My Scripts -->
   <script type="text/javascript" src="../../language/common/filters.js"></script>
+ <script type="text/javascript" src="../../generators/python/filters.js"></script>
+
+
   <script>
     var MSG = {
       // Tooltips.
